feat: implement the bar-chart-component

--- a/src/app/components/app-node-utilization/app-node-utilization.component.html
+++ b/src/app/components/app-node-utilization/app-node-utilization.component.html
@@ -16,23 +16,15 @@
  * limitations under the License.
  -->
 
- <mat-card appearance="outlined" class="box-card">
-    <mat-card-header>
-      <mat-card-title>Nodes Resource Utilization</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <div class="status-wrapper flex-grid">
-        <div class="chart-wrapper flex-primary">
-          <app-donut-chart [data]="chartData"></app-donut-chart>
-        </div>
-        <div class="chart-legend flex-primary">
-          <div *ngFor="let data of chartData">
-            <span class="fa fa-circle" [style.color]="data.color"></span>
-            <span class="legend-label">{{ data.name }}</span>
-            <span class="legend-value">{{ data.value }}</span>
-          </div>
-        </div>
+<mat-card appearance="outlined" class="box-card">
+  <mat-card-header>
+    <mat-card-title>Nodes Resource Utilization</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <div class="status-wrapper flex-grid">
+      <div class="chart-wrapper flex-primary">
+        <app-bar-chart [data]="chartData" />
       </div>
-    </mat-card-content>
-  </mat-card>
-  
+    </div>
+  </mat-card-content>
+</mat-card>
