[YUNIKORN-2198] The 'utilized' column in the 'nodes' table is not formatted correctly

--- a/src/app/components/nodes-view/nodes-view.component.html
+++ b/src/app/components/nodes-view/nodes-view.component.html
@@ -44,7 +44,7 @@
 
         <ng-container
           *ngIf="
-            ['capacity', 'occupied', 'allocated', 'available'].includes(columnDef.colId);
+            ['capacity', 'occupied', 'allocated', 'available', 'utilized'].includes(columnDef.colId);
             else renderNext_1
           "
         >
