[YUNIKORN-2231] Show node list when hovering mouse over the node utitutilization bar chart

--- a/src/app/components/app-node-utilization/app-node-utilization.component.html
+++ b/src/app/components/app-node-utilization/app-node-utilization.component.html
@@ -18,7 +18,8 @@
 
 <mat-card appearance="outlined" class="box-card">
   <mat-card-header>
-    <mat-card-title>Nodes Resource Utilization</mat-card-title>
+    <mat-card-title>{{title}}</mat-card-title>
+    <mat-card-subtitle>{{subtitle}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
     <div class="status-wrapper flex-grid">
