--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -39,6 +39,10 @@
     width: 65%;
     max-width: 65%;
   }
+  .half-col {
+    width: 50%;
+    max-width: 50%;
+  }
   .grid-row {
     margin-top: 30px;
   }
