--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -94,8 +94,8 @@
     </div>
   </div>
   <div class="flex-grid grid-row">
-    <div class="left-col flex-primary">
-      <app-node-utilization [chartData]="nodeUtilizationData" />
+    <div class="half-col flex-primary">
+      <app-node-utilization [chartData]="nodeUtilizationChartData.chartDataItems" title="Nodes Resource Utilization" [subtitle]="('Domaint Resource:' + nodeUtilizationChartData.type)"/>
     </div>
   </div>
 </div>
