[YUNIKORN-2325] Add a chart to display multi-type resource utilisation (Web)

--- a/src/app/components/nodes-view/nodes-view.component.html
+++ b/src/app/components/nodes-view/nodes-view.component.html
@@ -197,4 +197,9 @@
       ></mat-paginator>
     </div>
   </div>
+  <div class="flex-grid">
+    <div class="flex-primary">
+      <app-node-utilizations [partitionSelected]="partitionSelected" />
+    </div>
+  </div>
 </div>
