--- a/src/app/components/app-node-utilizations/app-node-utilizations.component.html
+++ b/src/app/components/app-node-utilizations/app-node-utilizations.component.html
@@ -1,4 +1,4 @@
-/**
+<!--
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -14,11 +14,18 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */
+ -->
 
-export const DEFAULT_PARTITION_VALUE = '';
-export const DEFAULT_PROTOCOL = 'http:';
-export const NOT_AVAILABLE = 'n/a';
-export const PARTITION_DEFAULT = 'default';
-export const DEFAULT_BAR_COLOR = '#4285f4';
-export const CHART_COLORS = ['#4285f4', '#db4437', '#f4b400', '#0f9d58', '#ff6d00', '#3949ab', '#facc54', '#26bbf0', '#cc6164', '#60cea5'];
+<mat-card appearance="outlined" class="box-card">
+  <mat-card-header>
+    <mat-card-title>Node Utilizations</mat-card-title>
+    <mat-card-subtitle>Domaint Resource: {{domaintResource}}</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    <div class="status-wrapper flex-grid">
+      <div class="chart-wrapper flex-primary">
+        <app-vertical-bar-chart [bucketList]="bucketList" [barChartDataSets]="barChartDataSets" />
+      </div>
+    </div>
+  </mat-card-content>
+</mat-card>
