--- a/src/app/components/app-node-utilizations/app-node-utilizations.component.html
+++ b/src/app/components/app-node-utilizations/app-node-utilizations.component.html
@@ -18,8 +18,7 @@
 
 <mat-card appearance="outlined" class="box-card">
   <mat-card-header>
-    <mat-card-title>Node Utilizations</mat-card-title>
-    <mat-card-subtitle>Domaint Resource: {{domaintResource}}</mat-card-subtitle>
+    <mat-card-title>Node Resource Utilization</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <div class="status-wrapper flex-grid">
