--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -95,7 +95,7 @@
   </div>
   <div class="flex-grid grid-row">
     <div class="half-col flex-primary">
-      <app-node-utilization [chartData]="nodeUtilizationChartData.chartDataItems" title="Nodes Resource Utilization" [subtitle]="('Domaint Resource:' + nodeUtilizationChartData.type)"/>
+      <app-node-utilization [chartData]="nodeUtilizationChartData.chartDataItems" title="Node Resource Utilization" [subtitle]="('Dominant Resource:' + nodeUtilizationChartData.type)"/>
     </div>
   </div>
 </div>
