--- a/src/app/components/vertical-bar-chart/vertical-bar-chart.component.scss
+++ b/src/app/components/vertical-bar-chart/vertical-bar-chart.component.scss
@@ -15,3 +15,13 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
+.legend-div {
+    width: 15%;
+    font-size: 1.2em;
+}
+
+.canvas-div {
+    height: 50vh;
+    width: 85%;
+}
