--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,6 +59,17 @@
         <span>Status</span>
       </a>
     </li>
+    <li routerLinkActive="active">
+      <a routerLink="/visualizer">
+        <i class="fa fa-caret-right"></i>
+        <i class="fa fa fa-paint-brush"></i>
+        <span>Visualizer</span>
+        <div class="experiment-tab">
+          <i class="fa fa-flask"></i>
+          Beta
+        </div> 
+      </a>
+    </li>
   </ul>
   <div class="expander" (click)="toggleNavigation()">
     <i class="fa fa-angle-double-left"></i>
