--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -219,6 +219,12 @@ ul.navigation-primary {
   padding-top: 61px;
 }
 
+.experiment-tab {
+  color: #eaa31f;
+  font-size: 12px;
+  padding-top: 4px;
+}
+
 .header {
   height: 61px;
   background: #fff;
