--- a/src/app/components/yaml-visualizer/yaml-visualizer.component.html
+++ b/src/app/components/yaml-visualizer/yaml-visualizer.component.html
@@ -16,6 +16,19 @@
  * limitations under the License.
  -->
 
-<div class="queue-visualizer">
-    <h3>YAMLLLLLLLLLLLLLL</h3>
+ <div class="queue-visualizer">
+    <div class="caption">
+        <img class="logo" src="./assets/images/yunikorn-logo-blue.png">
+        Queue Graphs
+    </div>
+    <div class="source-alternatives"> 
+        <div class="file-upload-box">
+            <h1>Local file</h1>
+            <div class="upload-instructions">
+              <p>
+                Drag and Drop <br> or click to select
+              </p>
+            </div>
+        </div>
+    </div>
 </div>
