--- a/src/app/components/yaml-visualizer/yaml-visualizer.component.scss
+++ b/src/app/components/yaml-visualizer/yaml-visualizer.component.scss
@@ -15,3 +15,57 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
+ /* Styles refactored for a non-atomic approach */
+
+ .queue-visualizer {
+    min-height: 100%;
+    background: white;
+    color: black;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.queue-visualizer .caption {
+    display: flex;
+    align-items: center;
+    font-size: 2em;
+    margin-bottom: .5em;
+}
+
+.queue-visualizer .caption .logo {
+    width: 1.5em;
+    margin-right: .5em;
+}
+
+.queue-visualizer .source-alternatives .file-upload-box {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2.5rem;
+    max-width: 28rem;
+    border-radius: 0.5rem;
+    background-color: #f7fafc;
+    padding: 2.5rem;
+    text-align: center;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    font-size: 1.125rem;
+    font-weight: 600;
+}
+
+.queue-visualizer .source-alternatives .file-upload-box .upload-instructions {
+    display: flex;
+    height: 10rem;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    margin-top: 1.5rem;
+    border-radius: 0.5rem;
+    border: 2px dashed #d2d6dc;
+    font-size: 0.875rem;
+    font-weight: 500;
+    color: #6b7280;
+}
