--- a/src/app/components/yaml-visualizer/yaml-visualizer.component.html
+++ b/src/app/components/yaml-visualizer/yaml-visualizer.component.html
@@ -16,19 +16,26 @@
  * limitations under the License.
  -->
 
- <div class="queue-visualizer">
-    <div class="caption">
-        <img class="logo" src="./assets/images/yunikorn-logo-blue.png">
-        Queue Graphs
-    </div>
-    <div class="source-alternatives"> 
-        <div class="file-upload-box">
-            <h1>Local file</h1>
-            <div class="upload-instructions">
-              <p>
-                Drag and Drop <br> or click to select
-              </p>
-            </div>
+ <div class="queue-container">
+    <div class="queue-content-box">
+      <div class="header">
+        <div class="title-group">
+          <img class="icon" src="./assets/images/yunikorn-logo-blue.png">
+          <div>Queue Graphs</div>
         </div>
+      </div>
+      <div class="body">
+        <div class="upload-area">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon">
+            <path d="M4 14.899A7 7 0 1 1 15.71 8h1.79a4.5 4.5 0 0 1 2.5 8.242"></path>
+            <path d="M12 12v9"></path>
+            <path d="m16 16-4-4-4 4"></path>
+          </svg>
+          <div>Drag and Drop</div>
+          <div>or</div>
+          <div>Click to Select</div>
+          <div class="yunikorn-yamll">YuniKorn config.yaml</div>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
