--- a/src/app/components/yaml-visualizer/yaml-visualizer.component.scss
+++ b/src/app/components/yaml-visualizer/yaml-visualizer.component.scss
@@ -18,54 +18,74 @@
 
  /* Styles refactored for a non-atomic approach */
 
- .queue-visualizer {
-    min-height: 100%;
-    background: white;
-    color: black;
-    padding: 1em;
+//  .queue-container {
+//     display: flex;
+//     height: 100vh;
+//     width: 100%;
+//     align-items: center;
+//     justify-content: center;
+//     background-color: #f3f4f6; /* bg-gray-100 */
+//     padding: 1rem;
+// }
+  
+  .queue-content-box {
+    width: calc(100% - 2rem); /* Subtract padding from the total width */
+    height: calc(100vh - 2rem); /* Subtract padding from the total height to ensure it's nearly as tall as the container */
+    border-radius: 0.5rem;
+    background-color: white;
+    padding: 20px; /* Adjust padding to your preference */
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    overflow: auto; /* Add scroll for overflow content */
+  }
+  
+  .header .title-group {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 1rem;
+  }
+  
+  .title-group .icon {
+    height: 2rem;
+    width: 2rem;
+    margin-right: 10px;
+  }
+  
+  .title-group div {
+    font-size: 1.25rem; 
+    font-weight: 600; 
+    color: #010407; 
+  } 
+
+  .upload-area {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    text-align: center;
-}
-
-.queue-visualizer .caption {
-    display: flex;
-    align-items: center;
-    font-size: 2em;
-    margin-bottom: .5em;
-}
-
-.queue-visualizer .caption .logo {
-    width: 1.5em;
-    margin-right: .5em;
-}
-
-.queue-visualizer .source-alternatives .file-upload-box {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 2.5rem;
-    max-width: 28rem;
-    border-radius: 0.5rem;
-    background-color: #f7fafc;
-    padding: 2.5rem;
-    text-align: center;
-    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-    font-size: 1.125rem;
-    font-weight: 600;
-}
-
-.queue-visualizer .source-alternatives .file-upload-box .upload-instructions {
-    display: flex;
-    height: 10rem;
+    height: 600px; /* Adjust based on content */
+    max-height: 80%; /* Ensure there's space around the area within the content box */
     width: 100%;
-    align-items: center;
-    justify-content: center;
-    margin-top: 1.5rem;
     border-radius: 0.5rem;
-    border: 2px dashed #d2d6dc;
-    font-size: 0.875rem;
-    font-weight: 500;
-    color: #6b7280;
-}
+    border: 2px dashed #d1d5db; /* border-gray-300 */
+    background-color: #f9fafb; /* bg-gray-50 */
+    gap: 0.2rem;
+    padding: 20px; /* Provide some padding around the content */
+  }
+  
+  .upload-area .icon {
+    height: 2rem; /* h-8 */
+    width: 2rem; /* w-8 */
+    color: #9ca3af; /* text-gray-400 */
+  }
+  
+  .upload-area div {
+    padding-top: 0.1rem;
+    font-size: 1rem; /* text-sm */
+    color: #6b7280; /* text-gray-500 */
+  }
+
+  .upload-area .yunikorn-yamll{
+    color: rgb(10, 61, 149);
+    margin-top: 10px;
+  }
+  
