queue v2 and visualizer

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -219,7 +219,8 @@ ul.navigation-primary {
   padding-top: 61px;
 }
 
-.experiment-tab {
+//  remove the beta tag when the feature is ready for production
+.beta-tag {
   color: #eaa31f;
   font-size: 12px;
   padding-top: 4px;
