--- a/src/app/components/queue-visualizer/queue-visualizer.component.html
+++ b/src/app/components/queue-visualizer/queue-visualizer.component.html
@@ -20,8 +20,8 @@
     <div class="queue-content-box">
       <div class="header">
         <div class="title-group">
-          <img class="icon" src="./assets/images/yunikorn-logo-blue.png">
-          <div>Queue Graphs</div>
+          <img class="icon" src="./assets/images/yunikorn_blue_logo.png">
+          <div>Queue config</div>
         </div>
       </div>
       <div class="body">
@@ -33,7 +33,7 @@
           </svg>
           <div>Drag and Drop</div>
           <div>or</div>
-          <div>Click to Select</div>
+          <div>Click to Select your</div>
           <div class="yunikorn-yamll">YuniKorn config.yaml</div>
         </div>
       </div>
