--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,6 +39,17 @@
       </a>
     </li>
     <li routerLinkActive="active">
+      <a routerLink="/queues-v2">
+        <i class="fa fa-caret-right"></i>
+        <i class="fa fa-sitemap" style="width: 16px"></i>
+        <span>Queues V2</span>
+        <div class="beta-tag">
+          <i class="fa fa-flask"></i>
+          Beta
+        </div> 
+      </a>
+    </li>
+    <li routerLinkActive="active">
       <a routerLink="/applications">
         <i class="fa fa-caret-right"></i>
         <i class="fa fa-indent"></i>
@@ -64,7 +75,7 @@
         <i class="fa fa-caret-right"></i>
         <i class="fa fa fa-paint-brush"></i>
         <span>Visualizer</span>
-        <div class="experiment-tab">
+        <div class="beta-tag">
           <i class="fa fa-flask"></i>
           Beta
         </div> 
