[YUNIKORN-2325] Add a chart to display multi-type resource utilization (#160)
Closes: #160

Signed-off-by: Craig Condit <ccondit@apache.org>

--- a/src/app/components/app-node-utilizations/app-node-utilizations.component.html
+++ b/src/app/components/app-node-utilizations/app-node-utilizations.component.html
@@ -1,4 +1,4 @@
-/**
+<!--
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -14,11 +14,17 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */
+ -->
 
-export const DEFAULT_PARTITION_VALUE = '';
-export const DEFAULT_PROTOCOL = 'http:';
-export const NOT_AVAILABLE = 'n/a';
-export const PARTITION_DEFAULT = 'default';
-export const DEFAULT_BAR_COLOR = 'rgba(66, 133, 244, 1)';
-export const CHART_COLORS = ['rgba(66, 133, 244, 1)', 'rgb(219, 68, 55, 1)', 'rgb(244, 180, 0, 1)', 'rgb(15, 157, 88, 1)', 'rgb(255, 109, 0, 1)', 'rgb(57, 73, 171, 1)', 'rgb(250, 204, 84, 1)', 'rgb(38, 187, 240, 1)', 'rgb(204, 97, 100, 1)', 'rgb(96, 206, 165, 1)']
+<mat-card appearance="outlined" class="box-card">
+  <mat-card-header>
+    <mat-card-title>Node Resource Utilization</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <div class="status-wrapper flex-grid">
+      <div class="chart-wrapper flex-primary">
+        <app-vertical-bar-chart [bucketList]="bucketList" [barChartDataSets]="barChartDataSets" />
+      </div>
+    </div>
+  </mat-card-content>
+</mat-card>
