[YUNIKORN-2379] Adjust layout of node utilization chart(Web)

--- a/src/app/components/nodes-view/nodes-view.component.html
+++ b/src/app/components/nodes-view/nodes-view.component.html
@@ -197,9 +197,8 @@
       ></mat-paginator>
     </div>
   </div>
-  <div class="flex-grid">
-    <div class="flex-primary">
-      <app-node-utilizations [partitionSelected]="partitionSelected" />
-    </div>
-  </div>
+</div>
+
+<div class="node-utilizations-view">
+  <app-node-utilizations [partitionSelected]="partitionSelected" />
 </div>
