[YUNIKORN-2414] Embeds fontawesome and roboto

--- a/src/app/components/nodes-view/nodes-view.component.scss
+++ b/src/app/components/nodes-view/nodes-view.component.scss
@@ -15,7 +15,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-@import "https://fonts.googleapis.com/icon?family=Material+Icons";
+@import '~material-design-icons/iconfont/material-icons.css';
 
 .top-part{
   display: flex;
