--- a/src/app/components/healthchecks/healthchecks.component.scss
+++ b/src/app/components/healthchecks/healthchecks.component.scss
@@ -15,8 +15,8 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
- 
-@import "https://fonts.googleapis.com/icon?family=Material+Icons";
+
+@import '~material-design-icons/iconfont/material-icons.css';
 
 .healthcheck-headers-align .mat-expansion-panel-header-title,
 .healthcheck-headers-align .mat-expansion-panel-header-description {
