[YUNIKORN-2448] Implemented licenses modal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -93,6 +93,9 @@
             <button mat-menu-item (click)="openYuniKornHelp('/community/get_involved')">
               Get Involved
             </button>
+            <button mat-menu-item (click)="openYuniKornLicense()">
+              License Information
+            </button>
           </mat-menu>
         </div>
       </div>
