--- a/src/app/components/queue-v2/queues-v2.component.html
+++ b/src/app/components/queue-v2/queues-v2.component.html
@@ -20,7 +20,7 @@
     <div class="queue-content-box">
       <div class="header">
         <div class="title-group">
-          <div>Queue</div>
+          <div>Partition</div>
         </div>
       </div>
       <div class="body">
