[YUNIKORN-2347] Navigate to the center of the queue SVG

--- a/src/app/components/queue-v2/queues-v2.component.html
+++ b/src/app/components/queue-v2/queues-v2.component.html
@@ -21,6 +21,7 @@
       <div class="header">
         <div class="title-group">
           <div>Partition</div>
+          <button class="fit-to-screen-button"></button>
         </div>
       </div>
       <div class="body">
