YUNIKORN-2491: Implements default queue selection
- Landing on the application page will prompt user to select queue (partition is selected by default)
- Selected queue:partition pair is stored in localStorage
- If partition is changed user will be prompted to select queue again on applications page

--- a/src/app/components/apps-view/apps-view.component.html
+++ b/src/app/components/apps-view/apps-view.component.html
@@ -31,7 +31,7 @@
     <div class="dropdown-wrapper">
       <label class="dropdown-label">Queue: </label>
       <mat-form-field>
-        <mat-select [(value)]="leafQueueSelected" (selectionChange)="onQueueSelectionChanged($event)">
+        <mat-select [(value)]="leafQueueSelected" (selectionChange)="onQueueSelectionChanged($event)" #queueSelect>
           <mat-option *ngFor="let queue of leafQueueList" [value]="queue.value">
             {{ queue.name }}
           </mat-option>
