[YUNIKORN-2354] Visualize the current queue that YuniKorn is using

--- a/src/app/components/queue-v2/queues-v2.component.html
+++ b/src/app/components/queue-v2/queues-v2.component.html
@@ -30,7 +30,12 @@
         </div>
       </div>
       <div class="body">
-        <div class="visualize-area">
+        <div class="content-wrapper">
+          <div class="visualize-area">
+          </div>
+          <div class="additional-element">
+            asdfasdfasd
+          </div>
         </div>
       </div>
     </div>
