--- a/src/app/components/apps-view/apps-view.component.scss
+++ b/src/app/components/apps-view/apps-view.component.scss
@@ -189,6 +189,11 @@
       color: #f44336;
     }
   }
+  .copy-btn {
+    font-size: 1em;
+    cursor: pointer;
+    padding-left: 5px;
+  }
   .header {
     margin: 20px;
     font-weight: 100;
