--- a/src/app/components/queue-v2/queues-v2.component.scss
+++ b/src/app/components/queue-v2/queues-v2.component.scss
@@ -100,11 +100,73 @@
     padding: 20px;
   }
 
-  .additional-element {
+  .additional-info-element {
     width: 420px; 
+    height: 600px;  // as same as visualize-area
     align-items: stretch;
     background-color: #f3f6f8; 
     border-radius: 0.5rem;
     border: 1px groove #1a1a1b;
-    // display: none;
+    display: none;
+    overflow: scroll;
+  }
+
+  .additional-info-header {
+    color: #010407;
+    font-size: 1.25rem;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+  }
+
+  .info-section {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+    margin-left: 16px;
+    width: 90%;
+  }
+
+  .info-block {
+    width: 90%;
+    border-bottom: 1px solid #eaeaea;
+    padding: 16px;
+  }
+
+  .status-active {
+    color: #4caf50;
+  } 
+
+  .info-block:last-child {
+    border-bottom: none;
+  }
+
+  .info-block-header {
+    font-size: 16px;
+    color: #4a4a4a;
+    font-weight: bold;
+  }
+
+  .allocated-block, .capacity-block {
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    padding: 16px;
+  }
+
+  .pending-block {
+    background-color: #ffffe0;
+    border-radius: 8px;
+    padding: 16px;
+  }
+
+  .max-block {
+      background-color: #e0ffe0; /* Light green background */
+      border-radius: 8px;
+      padding: 16px;
+  }
+
+  .capacity-icon{
+    display: flex;
+    align-items: center;
+    gap: 8px;
   }
