--- a/src/app/components/queue-v2/queues-v2.component.scss
+++ b/src/app/components/queue-v2/queues-v2.component.scss
@@ -165,6 +165,12 @@
       padding: 16px;
   }
 
+  .guaranteed-block {
+    background-color: #d8f3fa; /* Light green background */
+    border-radius: 8px;
+    padding: 16px;
+  }
+
   .capacity-icon{
     display: flex;
     align-items: center;
