--- a/src/app/components/queue-v2/queues-v2.component.scss
+++ b/src/app/components/queue-v2/queues-v2.component.scss
@@ -130,11 +130,12 @@
   .info-block {
     width: 90%;
     border-bottom: 1px solid #eaeaea;
-    padding: 16px;
+    padding: 10px;
   }
 
-  .status-active {
-    color: #4caf50;
+  .queue-status {
+    color: #e13020;
+    font-size: 10px;
   } 
 
   .info-block:last-child {
@@ -147,28 +148,37 @@
     font-weight: bold;
   }
 
+  .info-block-text {
+    font-size: 14px;
+    display:inline;
+  }
+
   .allocated-block, .capacity-block {
+    font-size: 13px;
     background-color: #f9f9f9;
     border-radius: 8px;
-    padding: 16px;
+    padding: 4px;
   }
 
   .pending-block {
+    font-size: 13px;
     background-color: #ffffe0;
     border-radius: 8px;
-    padding: 16px;
+    padding: 4px;
   }
 
   .max-block {
+      font-size: 13px;
       background-color: #e0ffe0; /* Light green background */
       border-radius: 8px;
-      padding: 16px;
+      padding: 4px;
   }
 
   .guaranteed-block {
+    font-size: 13px;
     background-color: #d8f3fa; /* Light green background */
     border-radius: 8px;
-    padding: 16px;
+    padding: 4px;
   }
 
   .capacity-icon{
