[YUNIKORN-2889] Fixed redundant scrollbar & invalid `overflow` style setting

--- a/src/app/components/app-status/app-status.component.scss
+++ b/src/app/components/app-status/app-status.component.scss
@@ -27,7 +27,7 @@
 .chart-legend {
   max-width: 200px;
   max-height: 220px;
-  overflow: scroll;
+  overflow: auto;
   margin: 0 auto;
   font-size: 0.8em;
   font-weight: bold;
